<resources>
    <string name="app_name" translatable="false">Holy Helper</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="title_activity_toolbox" translatable="false">ToolboxActivity</string>
    <string name="title_activity_script_toolbox" translatable="false">ScriptToolboxActivity</string>

    <string name="error_title">An unexpected error occurred.\nSorry for the inconvenience.</string>
    <string name="backup_boot_title">BACK UP BOOT IMAGE</string>
    <string name="mnt_title">%s WINDOWS</string>
    <string name="toolbox_title">WOA TOOLBOX</string>
    <string name="dump_modem_title">DUMP MODEM</string>
    <string name="flash_uefi_title">FLASH UEFI</string>
    <string name="uefi_not_found">UEFI NOT FOUND</string>
    <string name="quickboot_title">QUICKBOOT TO WINDOWS</string>
    <string name="sta_title">STA CREATOR</string>
    <string name="usbhost_title">USB HOST MODE TOGGLE</string>
    <string name="software_title">ARM SOFTWARE</string>
    <string name="rotation_title">ROTATION TOGGLE</string>
    <string name="autoflash_title">AUTO ANDROID FLASHER</string>
    <string name="atlasos_title">COPY ATLASOS / REVIOS FILES</string>
    <string name="defender_title">EDGE / DEFENDER REMOVER</string>
    <string name="script_title">SCRIPT TOOLBOX</string>
    <string name="setup_title">FRAMEWORK INSTALLERS</string>
    <string name="dbkp_title">DUALBOOT KERNEL PATCHER</string>
    <string name="tablet_title">TABLET MODE SCRIPT</string>
    <string name="devcfg_title">DEVCFG FLASHER</string>

    <string name="backup_boot_subtitle">Back up boot image to Android and/or Windows</string>
    <string name="mnt_subtitle">Toggle mounting Windows partition in order to view or edit content inside</string>
    <string name="toolbox_subtitle">Tools and scripts for a more enjoyable Windows experience</string>
    <string name="dump_modem_subtitle">Dump modem to Windows to fix LTE on SIM1 in Windows.\nRequired before every Windows boot</string>
    <string name="flash_uefi_subtitle">Flash UEFI to boot partition</string>
    <string name="uefi_not_found_subtitle">Please download the UEFI image for %s and place it in the UEFI FOLDER in INTERNAL STORAGE (/sdcard/UEFI)</string>
    <string name="quickboot_subtitle">Flash UEFI and reboot to Windows in one click</string>
    <string name="sta_subtitle">Adds the Switch to Android app to Windows</string>
    <string name="usbhost_subtitle">Adds a script to C:⧹Toolbox which allows you to toggle USB Host Mode</string>
    <string name="software_subtitle">Adds browser shortcuts containing ARM software to C:⧹Toolbox</string>
    <string name="rotation_subtitle">Adds a script to C:⧹Toolbox that lets you rotate the screen with a shortcut\n(useful for devices without working sensors)</string>
    <string name="autoflash_subtitle">Adds a script to Windows which automatically flashes the Android boot.img whenever Windows boots</string>
    <string name="atlasos_subtitle">Copies the AtlasOS or ReviOS playbook and AME Wizard to C:⧹Toolbox</string>
    <string name="defender_subtitle">Adds a script to C:⧹Toolbox which allows you to remove Microsoft Edge \/ Windows Defender</string>
    <string name="script_subtitle">Adds an assortment of scripts and tweaks to C:⧹Toolbox</string>
    <string name="setup_subtitle">Adds installers for several frameworks into C:⧹Toolbox</string>
    <string name="dbkp_subtitle">Patches the kernel for seamless dualbooting</string>
    <string name="tablet_subtitle">Adds a script to C:⧹Toolbox which allows you to toggle tablet mode</string>
    <string name="devcfg_subtitle">Flashes OOS11 devcfg so that Windows can boot on OOS12 devices</string>

    <string name="backup_boot_question">Back up current Android boot image?</string>
    <string name="mount_question">Mount Windows to %s?</string>
    <string name="unmount_question">Unmount Windows?</string>
    <string name="dump_modem_question">Dump modem1st and modem2st to Windows partition?</string>
    <string name="flash_uefi_question">Flash UEFI? \nIf so, the next boot will be in Windows</string>
    <string name="quickboot_question">Quickboot to Windows?</string>
    <string name="sta_question">Create Switch to Android app in C:⧹sta?</string>
    <string name="usbhost_question">Copy USB Host Mode script to C:⧹Toolbox?</string>
    <string name="software_question">Copy browser shortcuts to C:⧹Toolbox?</string>
    <string name="rotation_question">Copy rotation shortcut to C:⧹Toolbox?</string>
    <string name="autoflash_question">Install boot.img autoflasher script into Windows?</string>
    <string name="atlasos_question">Download and move AtlasOS or ReviOS playbook to C:⧹Toolbox?</string>
    <string name="defender_question">Copy Edge \/ Defender remover scripts to C:⧹Toolbox?</string>
    <string name="setup_question">Download and move C++ Redistributables, DirectX, OpenGL, OpenAL, PhysX, and XNA framework installers to C:⧹Toolbox?\n(this may take some time)</string>
    <string name="dbkp_question">Patch and flash your current kernel?\n!!!DO NOT PRESS YES UNLESS YOUR DEVICE IS %s!!!</string>
    <string name="tablet_question">Copy tablet mode script to C:⧹Toolbox?</string>
    <string name="devcfg_question">Flash OOS11 devcfg?\n!!!DO NOT PRESS YES UNLESS YOUR DEVICE IS %s!!!</string>

    <string name="wrong">Something went wrong</string>
    <string name="mountfail">Something went wrong, \nWindows could not be mounted.\nRequest help in the Telegram chat.</string>
    <string name="ntfs">NTFS support not detected. \nInstall NTFS3G module?</string>
    <string name="internet">No internet connection found.\nConnect to the internet and try again.</string>
    <string name="partition">No Windows partition detected.</string>
    <string name="internalstorage">Files downloaded in internal storage</string>
    <string name="dbkp">Boot image has been patched and flashed.\nPatched image can also be found at /sdcard/patched-boot.img.\nUse your %s to switch between Windows and Android.</string>
    <string name="devcfg">OOS11 devcfg has been flashed.\nOriginal devcfg can be found at /sdcard/devcfg.img.\nUse sdd.exe in STA Creator to flash OOS12 devcfg when returning to Android</string>
    <string name="op7">alert slider</string>
    <string name="cepheus">assistant button</string>
    <string name="nabu">magnetic case</string>
    <string name="reboot">Reboot</string>
    <string name="cancel">Cancel</string>
    <string name="mounted">Windows mounted</string>
    <string name="unmounted">Windows unmounted</string>
    <string name="rebootr">Reboot required</string>
    <string name="lte">Enjoy LTE in Windows</string>
    <string name="flash">UEFI flashed successfully.\nNext boot will boot into Windows. </string>
    <string name="backuped">Boot image backed up successfully\n</string>
    <string name="preferences">Preferences</string>
    <string name="bwarn">!!WARNING!!\n UFS may be worn down by this, enable only if you receive a lot of OTA updates</string>
    <string name="agree">Agree</string>
    <string name="nonroot">Root not detected</string>
    <string name="unsupported">!!WARNING!!\nDevice unsupported\nUse this app at your own risk</string>
    <string name="unsupported2">Device unsupported</string>
    <string name="sure">OK, just let me use the app</string>
    <string name="upanel">Your panel has not been confirmed to work, please share your Windows experience in the Telegram chat</string>
    <string name="chat">Chat</string>
    <string name="nah">Nah</string>
    <string name="later">Later</string>
    <string name="done">Done!</string>
    <string name="mountt">MOUNT</string>
    <string name="unmountt">UNMOUNT</string>
    <string name="update">UPDATE</string>
    <string name="update1">Update available</string>
    <string name="update2">Updating...</string>

    <string name="last">LAST BACKUP : %s</string>
    <string name="slot">SLOT : %s</string>
    <string name="ramvalue">MEMORY : %.2fGB </string>
    <string name="paneltype">PANEL : %s</string>

    <string name="guide">GUIDE</string>
    <string name="group">GROUP</string>
    <string name="not_found">Not Found</string>

    <string name="yes">YES</string>
    <string name="dismiss">DISMISS</string>
    <string name="no">NO</string>
    <string name="please_wait">Please wait…</string>

    <string name="preference1">Force backup boot.img when quickboot (Windows)</string>
    <string name="preference2">Force backup boot.img when quickboot (Android)</string>
    <string name="preference3">Back up boot.img if none is detected</string>
    <string name="preference4">Back up boot.img if none is detected (Android)</string>
    <string name="preference5">Require confirmation for QS quickboot tile</string>
    <string name="preference6">Select language</string>
    <string name="preference7">Automatically mount Windows on device start</string>
    <string name="preference8">Disable modem dump functionality</string>
    <string name="preference9">Require unlocked screen for quickboot</string>
    <string name="preference10">Mount Windows to /mnt instead of /sdcard</string>
    <string name="preference11">Disable checking for app updates</string>
    <string name="flash1">flash</string>
    <string name="update_question">Would you like to download version %s</string>
    <string name="download_failed_title">Couldn\'t download the file!</string>
    <string name="download_failed_subtitle">Check your internet connection\nFor any additional questions ask the developer of the app</string>
    <string name="download_file_failed_title">Failed to download %s</string>
    <string name="select">select</string>
    <string name="select_uefi_image">Select UEFI image</string>
    <string name="loading">Loading…</string>
    <string name="preference12">Derive colors from the default</string>
</resources>