<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/walp4"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.venddair.holyhelper.Button
            android:id="@+id/staButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:imageScaleX="1"
            app:imageScaleY="1"
            app:image="@drawable/adrod"
            app:title="@string/sta_title"
            app:subtitle="@string/sta_subtitle" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.venddair.holyhelper.Button
            android:id="@+id/scriptButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:imageScaleX=".6"
            app:imageScaleY=".6"
            app:image="@drawable/folder"
            app:title="@string/script_title"
            app:subtitle="@string/script_subtitle" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.venddair.holyhelper.Button
            android:id="@+id/armButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:imageScaleX="1.1"
            app:imageScaleY="1.1"
            app:image="@drawable/ic_sensor"
            app:title="@string/software_title"
            app:subtitle="@string/software_subtitle" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.venddair.holyhelper.Button
            android:id="@+id/atlasosButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:imageScaleX="1.1"
            app:imageScaleY="1.1"
            app:image="@drawable/atlasos"
            app:title="@string/atlasos_title"
            app:subtitle="@string/atlasos_subtitle" />

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.venddair.holyhelper.Button
            android:id="@+id/dbkpButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:imageScaleX="1"
            app:imageScaleY="1"
            app:image="@drawable/ic_uefi"
            app:title="@string/dbkp_title"
            app:subtitle="@string/dbkp_subtitle" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>