<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/walp4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.venddair.holyhelper.Button
            android:id="@+id/usbhostmode"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:imageScaleX=".57"
            app:imageScaleY=".57"
            app:image="@drawable/folder"
            app:title="@string/usbhost_title"
            app:subtitle="@string/usbhost_subtitle" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <com.venddair.holyhelper.Button
            android:id="@+id/rotation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:imageScaleX=".8"
            app:imageScaleY=".8"
            app:image="@drawable/cd"
            app:title="@string/rotation_title"
            app:subtitle="@string/rotation_subtitle" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <com.venddair.holyhelper.Button
            android:id="@+id/frameworkInstallers"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:imageScaleX=".57"
            app:imageScaleY=".57"
            app:image="@drawable/folder"
            app:title="@string/setup_title"
            app:subtitle="@string/setup_subtitle" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <com.venddair.holyhelper.Button
            android:id="@+id/edgeremover"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:imageScaleX=".9"
            app:imageScaleY=".9"
            app:image="@drawable/edge"
            app:title="@string/defender_title"
            app:subtitle="@string/defender_subtitle" />

    </LinearLayout>

<!--    <com.venddair.holyhelper.PendingJob
        android:id="@+id/pendingJob"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />-->
</androidx.constraintlayout.widget.ConstraintLayout>