<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/walp3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/MountToMnt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_gray"
            android:paddingEnd="10dp"
            android:paddingStart="15dp"
            android:paddingVertical="20dp"
            android:text="@string/preference10"
            android:textColor="@color/white"
            android:thumbTint="@color/light_gray"
            android:thumbTintMode="multiply"
            android:trackTint="@color/slightly_lighter_gray"
            android:trackTintMode="src_in"
            tools:ignore="HardcodedText" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Switch
            android:id="@+id/DisableUpdates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_gray"
            android:paddingEnd="10dp"
            android:paddingStart="15dp"
            android:paddingVertical="20dp"
            android:text="@string/preference11"
            android:textColor="@color/white"
            android:thumbTint="@color/light_gray"
            android:thumbTintMode="multiply"
            android:trackTint="@color/slightly_lighter_gray"
            android:trackTintMode="src_in"
            tools:ignore="HardcodedText" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Switch
            android:id="@+id/AutoMount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_gray"
            android:paddingEnd="10dp"
            android:paddingStart="15dp"
            android:paddingVertical="20dp"
            android:text="@string/preference7"
            android:textColor="@color/white"
            android:thumbTint="@color/light_gray"
            android:thumbTintMode="multiply"
            android:trackTint="@color/slightly_lighter_gray"
            android:trackTintMode="src_in"
            tools:ignore="HardcodedText" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>